--- a/app/src/main/res/layout/fragment_riwayat_transaksi.xml
+++ b/app/src/main/res/layout/fragment_riwayat_transaksi.xml
@@ -45,7 +45,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvRiwayatTransaksi"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 tools:listitem="@layout/rv_riwayattransaksi_card"/>
         </ScrollView>
         <ProgressBar
