--- a/app/src/main/res/layout/rv_detailsimpanan_card.xml
+++ b/app/src/main/res/layout/rv_detailsimpanan_card.xml
@@ -14,15 +14,33 @@
 
         <TextView
             android:id="@+id/tvSimpananSukarela"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="25dp"
             android:fontFamily="@font/poppins_medium"
             android:text="Simpanan Sukarela "
             android:textSize="15sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            app:autoSizeTextType="uniform"
+            app:autoSizeMinTextSize="10sp"
+            app:autoSizeMaxTextSize="15sp"
+            app:autoSizeStepGranularity="1sp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/jarakNominal"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Space
+            android:id="@+id/jarakNominal"
+            android:layout_width="8dp"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textView2"
+            app:layout_constraintStart_toEndOf="@+id/tvSimpananSukarela"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
