--- a/app/src/main/res/layout/activity_tarik_nominal_simpanan.xml
+++ b/app/src/main/res/layout/activity_tarik_nominal_simpanan.xml
@@ -179,11 +179,11 @@
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
-        android:visibility="gone"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardCatatan"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardCatatan" />
 
     <!--    Card Untuk Catatan Transaksi-->
     <com.google.android.material.card.MaterialCardView
@@ -224,7 +224,6 @@
     <!-- !!!!!!!!!! -->
 
 
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardTotal"
         android:layout_width="match_parent"
@@ -253,35 +252,38 @@
                 android:textColor="@color/white"
                 android:textSize="13sp" />
 
-            <TextView
-                android:id="@+id/tvNominalTipeSimpanan"
-                android:layout_width="342dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_bold"
-                android:text="Rp 2.000.000"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="24sp"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tvNominalTipeSimpanan"
+                    android:layout_width="342dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="0"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginHorizontal="16dp"-->
-<!--        android:text="Silahkan Tunggu Proses.... "-->
-<!--        android:fontFamily="@font/poppins_bold"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/cardCatatan"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
 
     <Button
         android:id="@+id/btnConfirmTarikSimpanan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:visibility="gone"
         android:layout_marginTop="30dp"
         android:text="Tarik Simpanan"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardTotal" />
